<?xml version="1.0"?>
<package>
  <name>map_tools</name>
  <version>0.0.0</version>
  <description>The map_tools package</description>

  <license>GPL</license>
  <author email="joanpep.company@uib.es">Joan Pep Company</author>
  <maintainer email="joanpep.company@uib.es">Joan Pep Company</maintainer>


 
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>

  <export>
   
  </export>
</package>